# dbt-spark-development

./: .gitignore  dbt_project.yml  profiles.yml  pyproject.toml
dbt_athena_spark/: output
dbt_athena_spark/models/example/: model.sql  my_first_dbt_model.py  my_incremental_dbt_model.py  schema.yml
dbt_athena_spark/models/model_types/: pandas_model.py  schema.yml  spark_incremental.py
models/model_types/: change_engine_config.py  change_polling_interval.py  change_timeout_config.py  pymodel01.py  pymodel02.py  pymodel03.py  pymodel04.py  pymodel05.py  pymodel09_test_timeout.py
